fix hud not shown if some f3 entries are always on
[release]